add new R functionality section at end of chapters with new functions

--- a/chapter-2.ipynb
+++ b/chapter-2.ipynb
@@ -657,7 +657,17 @@
     "- **divergent validity**: A type of validity where a measurement method of a construct produces dissimilar values to measurements of unrelated constructs. \n",
     "- **measurement error**: Deviations between values produced by a measurement method and the true value of what is being measured. \n",
     "- **outlier**: A data value that is very different than the rest of the sample it belongs to. An outlier may or may not be a valid value. \n",
-    "- **missing data**: Data values that are left blank or otherwise unrecorded during a research study. This could be due to equipment failure, participant non-compliance, etc. "
+    "- **missing data**: Data values that are left blank or otherwise unrecorded during a research study. This could be due to equipment failure, participant non-compliance, etc. \n",
+    "\n",
+    "## New R functionality\n",
+    "\n",
+    "- [c()](https://www.rdocumentation.org/packages/base/versions/3.6.2/topics/c)\n",
+    "- [max() & min()](https://www.digitalocean.com/community/tutorials/min-max-in-r)\n",
+    "- [indexing](https://rspatial.org/intr/4-indexing.html)\n",
+    "- [data types](https://www.geeksforgeeks.org/r-data-types/)\n",
+    "- [str()](https://www.rdocumentation.org/packages/utils/versions/3.6.2/topics/str)\n",
+    "- [as.character()](https://www.rdocumentation.org/packages/base/versions/3.6.2/topics/character)\n",
+    "- [as.numeric()](https://www.rdocumentation.org/packages/base/versions/3.6.2/topics/numeric)\n"
    ]
   },
   {
