--- a/chapter-3.ipynb
+++ b/chapter-3.ipynb
@@ -286,7 +286,7 @@
    "source": [
     "The first dimension always corresponds to the number of rows, and the second dimension to the number of columns.\n",
     "\n",
-    "You can also use code to find the size of specific dimensions of the dataframe. Since observations are rows and variables are columns, you can use specific functions to count how many rows and columns a data frame has. In R, these functions are nrow() (for number of rows) and ncol() (for number of columns)."
+    "You can also use code to find the size of specific dimensions of the dataframe. Since observations are rows and variables are columns, you can use specific functions to count how many rows and columns a data frame has. In R, these functions are ```nrow()``` (for number of rows) and ```ncol()``` (for number of columns)."
    ]
   },
   {
@@ -849,7 +849,23 @@
     "- **control flow**: Ways of controling the order in which multiple actions in code are executed. \n",
     "- **conditional statement**: A programming language construct that performs different actions depending on the value of a logical expression. \n",
     "- **loop**: A sequence of code actions that is repeated a set number of times (in for loops) or until some condition is met (in while loops).\n",
-    "- **object scope**: The accessibility or visibility of objects within different parts of your code."
+    "- **object scope**: The accessibility or visibility of objects within different parts of your code.\n",
+    "\n",
+    "## New R functionality\n",
+    "\n",
+    "- [data.frame()](https://www.rdocumentation.org/packages/base/versions/3.6.2/topics/data.frame)\n",
+    "- [named arguments](https://www.oreilly.com/library/view/r-in-a/9781449358204/ch09s05.html)\n",
+    "- [read.csv()](https://www.rdocumentation.org/packages/utils/versions/3.6.2/topics/read.table)\n",
+    "- [getwd()](https://www.rdocumentation.org/packages/base/versions/3.6.2/topics/getwd)\n",
+    "- [head()](https://www.rdocumentation.org/packages/utils/versions/3.6.2/topics/head)\n",
+    "- [dim()](https://www.rdocumentation.org/packages/base/versions/3.6.2/topics/dim)\n",
+    "- [nrow()](https://www.rdocumentation.org/packages/base/versions/3.6.2/topics/nrow)\n",
+    "- [length()](https://www.rdocumentation.org/packages/base/versions/3.6.2/topics/length)\n",
+    "- [ncol()](https://www.rdocumentation.org/packages/hyperSpec/versions/0.98-20140523/topics/ncol)\n",
+    "- [if/else statements](https://www.w3schools.com/r/r_if_else.asp)\n",
+    "- [for loops](https://www.w3schools.com/r/r_for_loop.asp)\n",
+    "- [while loops](https://www.w3schools.com/r/r_while_loop.asp)\n",
+    "- [function()](https://www.dataquest.io/blog/write-functions-in-r/)"
    ]
   },
   {
