--- a/chapter-4.ipynb
+++ b/chapter-4.ipynb
@@ -730,7 +730,19 @@
     "\n",
     "- **data cleaning**: Ahe process of identifying and fixing errors in a dataset, and reformatting the dataset to be more analysis-compliant. \n",
     "- **destructive editing**: An editing practice where the original copy of a file is overwritten by an edited copy, destroying the original. \n",
-    "- **pipe**: An operator in R that allows a coder to pass the output of one function immediately as an argument in another."
+    "- **pipe**: An operator in R that allows a coder to pass the output of one function immediately as an argument in another.\n",
+    "\n",
+    "## New R functionality\n",
+    "\n",
+    "- [dplyr::select()](https://dplyr.tidyverse.org/reference/select.html)\n",
+    "- [dplyr::filter()](https://dplyr.tidyverse.org/reference/filter.html)\n",
+    "- [is.na()](https://www.rdocumentation.org/packages/base/versions/3.6.2/topics/NA)\n",
+    "- [dplyr::mutate()](https://dplyr.tidyverse.org/reference/mutate.html)\n",
+    "- [$ operator](https://www.geeksforgeeks.org/dollar-sign-in-r/)\n",
+    "- [dplyr::case_match()](https://dplyr.tidyverse.org/reference/case_match.html)\n",
+    "- [nested functions](https://www.w3schools.com/r/r_functions_nested.asp)\n",
+    "- [%>% pipe](https://www.datacamp.com/tutorial/pipe-r-tutorial)\n",
+    "- [write.csv()](https://www.geeksforgeeks.org/writing-to-csv-files-in-r/)"
    ]
   },
   {
