--- a/chapter-5.ipynb
+++ b/chapter-5.ipynb
@@ -906,7 +906,17 @@
     "- **interquartile range (IQR)**: A method of representing the amount of spread in a distribution by finding the \"middle half\" of the data, or the values that consitute the 25th and 75th percentiles. \n",
     "- **sum of squares**: A method of representing the amound of spread in a distribution by summing the squares of all data points' deviations from the mean. \n",
     "- **variance**: a method of representing the amount of spread in a distribution by dividing the sum of squares by N-1.\n",
-    "- **standard deviation**: A method of representing the amount of spread in a distribution by taking the square root of variance. Can be interpreted as the average amount of deviation each data point has from the mean. "
+    "- **standard deviation**: A method of representing the amount of spread in a distribution by taking the square root of variance. Can be interpreted as the average amount of deviation each data point has from the mean. \n",
+    "\n",
+    "## New R functionality\n",
+    "\n",
+    "- [ggformula::gf_histogram() & gf_dhistogram()](https://www.rdocumentation.org/packages/ggformula/versions/0.6/topics/gf_histogram)\n",
+    "- [mean()](https://www.rdocumentation.org/packages/base/versions/3.6.2/topics/mean)\n",
+    "- [median()](https://www.rdocumentation.org/packages/stats/versions/3.6.2/topics/median)\n",
+    "- [table()](https://www.rdocumentation.org/packages/base/versions/3.6.2/topics/table)\n",
+    "- [quantile()](https://www.rdocumentation.org/packages/stats/versions/3.6.2/topics/quantile)\n",
+    "- [var()](https://www.rdocumentation.org/packages/cmvnorm/versions/1.0-7/topics/var)\n",
+    "- [sd()](https://www.rdocumentation.org/packages/stats/versions/3.6.2/topics/sd)"
    ]
   },
   {
