--- a/chapter-6.ipynb
+++ b/chapter-6.ipynb
@@ -720,7 +720,7 @@
    "source": [
     "Boxplots visually tell us the quantiles of the data. The rectangle at the center of the boxplot shows us where the middle 50% of the data points fall on the scale of the outcome variable (i.e., the IQR). The thick line inside the box is the median. There are also lines, called whiskers, above and below the box. Another name for the boxplot is box-and-whisker plot. The points that appear past the whiskers are considered outliers by this function (anything that is greater than 75%ile + 1.5\\*IQR, or less than 25%ile - 1.5\\*IQR). This isn't the only way to define an outlier, but is a pretty common one. The length of the whiskers depicts the max and min of the data range - when there are outliers, the end of the whisker depicts the max or min value that is not considered an outlier.\n",
     "\n",
-    "In ```ggformula```, we can chain on multiple functions to put multiple types of plots in the same image. It's like adding a layer of one plot on top of a layer of the first one below it. When chaining between multiple ```gg_forumla``` plots, the later functions \"inherits\" the same variables and data so we don’t need to type those in again. Handy!"
+    "In ```ggformula```, we can chain on multiple functions to put multiple types of plots in the same image. It's like adding a layer of one plot on top of a layer of the first one below it. When chaining between multiple ```ggformula``` plots, the later functions \"inherits\" the same variables and data so we don’t need to type those in again. Handy!"
    ]
   },
   {
@@ -824,7 +824,17 @@
     "- **bar graph**: A type of data visualization that plots values of a categorical explanatory variable on the x-axis and number of data points in each category on the y-axis. \n",
     "- **scatterplot**: A type of data visualization that plots values of an explanatory variable (categorical or numeric) on the x-axis and values of an outcome variable (categorical or numeric) on the y-axis. \n",
     "- **jitter**: The slight repositioning of datapoints on a graph to aid in visualizing all points. Only a visual aid; does not change the actual value of the data points in the dataset.  \n",
-    "- **dichotomization/binning**: The process of dividing an interval variable into fewer bins and treating it as an ordinal or categorical variable. "
+    "- **dichotomization/binning**: The process of dividing an interval variable into fewer bins and treating it as an ordinal or categorical variable. \n",
+    "\n",
+    "## New R functionality\n",
+    "\n",
+    "- [ggformula::gf_refine()](https://www.rdocumentation.org/packages/ggformula/versions/0.10.1/topics/gf_labs)\n",
+    "- [ggplot2::scale_fill_manual()](https://ggplot2.tidyverse.org/reference/scale_manual.html)\n",
+    "- [ggformula::gf_facet_grid()](https://www.mosaic-web.org/ggformula/reference/gf_facet_grid.html)\n",
+    "- [ggformula::gf_bar()](https://www.mosaic-web.org/ggformula/reference/gf_bar.html)\n",
+    "- [ggformula::gf_point()](https://www.mosaic-web.org/ggformula/reference/gf_point.html)\n",
+    "- [ggformula::gf_jitter()](https://www.mosaic-web.org/ggformula/reference/gf_jitter.html)\n",
+    "- [ggformula::gf_boxplot()](https://www.mosaic-web.org/ggformula/reference/gf_boxplot.html)"
    ]
   },
   {
