add new R functionality section at end of chapters 6 & 7

--- a/chapter-6.ipynb
+++ b/chapter-6.ipynb
@@ -829,7 +829,7 @@
     "## New R functionality\n",
     "\n",
     "- [ggformula::gf_refine()](https://www.rdocumentation.org/packages/ggformula/versions/0.10.1/topics/gf_labs)\n",
-    "- [ggplot2::scale_fill_manual()](https://ggplot2.tidyverse.org/reference/scale_manual.html)\n",
+    "- [ggplot2::scale_fill_manual() & scale_color_manual()](https://ggplot2.tidyverse.org/reference/scale_manual.html)\n",
     "- [ggformula::gf_facet_grid()](https://www.mosaic-web.org/ggformula/reference/gf_facet_grid.html)\n",
     "- [ggformula::gf_bar()](https://www.mosaic-web.org/ggformula/reference/gf_bar.html)\n",
     "- [ggformula::gf_point()](https://www.mosaic-web.org/ggformula/reference/gf_point.html)\n",
