--- a/chapter-7.ipynb
+++ b/chapter-7.ipynb
@@ -14,7 +14,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "edba4d6a",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "# This chapter uses some packages that take a few minutes to download on Google Colab. \n",
@@ -72,7 +76,7 @@
     "\n",
     "The bar graph in panel A shows the difference in means, but doesn’t show us how much spread there is in the data around these means – and as we will see later, knowing this is essential to determine whether we think the difference between the groups is large enough to be important.\n",
     "\n",
-    "The second panel B shows the bars with all of the data points overlaid - this makes it a bit clearer that the distributions of height for men and women are overlapping, but it’s still hard to see due to the large number of data points focused on one spot. \n",
+    "The second panel B shows the bars with all of the jittered data points overlaid. This makes it a bit clearer that the distributions of height for men and women are overlapping, but it’s still hard to see due to the large number of data points focused on one spot. \n",
     "\n",
     "In general we prefer using a plotting technique that provides a clearer view of the distribution of the data points. In panel C, we see one example of a **violin plot**, which plots the distribution of data in each condition (after smoothing it out a bit). The name of this plot comes from the fact that it sort of resembles a violin shape. The fatter part of the \"violin\" is where there is more data, the skinnier parts are the tails of the distribution. You can make a plot like this in R using ```gf_violin()```. \n",
     "\n",
@@ -85,7 +89,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "310894e3",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "studentdata <- read.csv(\"https://raw.githubusercontent.com/smburns47/Psyc158/main/studentdata.csv\")"
@@ -95,7 +103,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "84383574",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "#Write your code here for making a boxplot of Thumb ~ RaceEthnic, with varying colors\n"
@@ -114,7 +126,10 @@
    "execution_count": null,
    "id": "61eea9a2",
    "metadata": {
-    "scrolled": true
+    "scrolled": true,
+    "vscode": {
+     "languageId": "r"
+    }
    },
    "outputs": [],
    "source": [
@@ -155,7 +170,10 @@
    "execution_count": null,
    "id": "e2dd907b",
    "metadata": {
-    "scrolled": true
+    "scrolled": true,
+    "vscode": {
+     "languageId": "r"
+    }
    },
    "outputs": [],
    "source": [
@@ -179,7 +197,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "02f32e2a",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "# Switch this to a better plot type, and make the group colors different\n",
@@ -240,7 +262,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "c6698607",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "gf_point(Middle ~ Thumb, data = studentdata) %>% \n",
@@ -260,7 +286,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "f33709ba",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "gf_point(Middle ~ Thumb, data = studentdata) %>%\n",
@@ -282,7 +312,10 @@
    "execution_count": null,
    "id": "b332d9f4",
    "metadata": {
-    "scrolled": true
+    "scrolled": true,
+    "vscode": {
+     "languageId": "r"
+    }
    },
    "outputs": [],
    "source": [
@@ -303,13 +336,16 @@
    "execution_count": null,
    "id": "3105c352",
    "metadata": {
-    "scrolled": true
+    "scrolled": true,
+    "vscode": {
+     "languageId": "r"
+    }
    },
    "outputs": [],
    "source": [
     "filter(studentdata, RaceEthnic %in% c(\"Asian\",\"White\")) %>%\n",
     "    gf_bar( ~ RaceEthnic, data = .) %>%\n",
-    "    gf_refine(., coord_cartesian(ylim = c(48, 56)))\n"
+    "    gf_refine(., coord_cartesian(ylim = c(45, 55)))\n"
    ]
   },
   {
@@ -336,7 +372,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "dc74de3d",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "gf_jitter(MathAnxious ~ StatsInterest, data = studentdata, height = 0.1, width = 0.1)"
@@ -359,7 +399,10 @@
    "execution_count": null,
    "id": "f9b9266b",
    "metadata": {
-    "scrolled": true
+    "scrolled": true,
+    "vscode": {
+     "languageId": "r"
+    }
    },
    "outputs": [],
    "source": [
@@ -380,13 +423,16 @@
    "execution_count": null,
    "id": "c7c34b91",
    "metadata": {
-    "scrolled": true
+    "scrolled": true,
+    "vscode": {
+     "languageId": "r"
+    }
    },
    "outputs": [],
    "source": [
     "gf_jitter(MathAnxious ~ StatsInterest, data = studentdata, \n",
     "          height = 0.1, width = 0.1, \n",
-    "          xlab = \"Interest in Statistics\", ylab = \"Math Anxiety\")"
+    "          xlab = \"Interest in Statistics\", ylab = \"Anxious About Doing Math\")"
    ]
   },
   {
@@ -401,13 +447,44 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "23432cde",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "gf_jitter(MathAnxious ~ StatsInterest, data = studentdata, \n",
     "          height = 0.1, width = 0.1, \n",
-    "          xlab = \"Interest in Statistics\", ylab = \"Math Anxiety\", \n",
+    "          xlab = \"Interest in Statistics\", ylab = \"Anxious About Doing Math\", \n",
     "          title = #YOUR CODE HERE)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2bdb1d16",
+   "metadata": {},
+   "source": [
+    "Next, notice the values on the Y-axis. By default they're put in alphabetical order, but ```MathAxious``` is clearly an ordinal variable and thus all the levels are out of order. We should recode this variable with a specified order. We can do this using the ```factor()``` function, which creates a specific kind of character data that has ordering information called \"levels\". We implement this in the first step of the code below. The ```levels = ``` argument in ```factor()``` takes a vector specifying which value should come first, second, etc. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c8b0c976",
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "studentdata %>%\n",
+    "mutate(., MathAnxious_ordinal = factor(MathAnxious, \n",
+    "          levels = c('Strongly Disagree', 'Disagree', 'Neither Agree nor Disagree', 'Agree', 'Strongly Agree'))) %>%\n",
+    "gf_jitter(MathAnxious_ordinal ~ StatsInterest, data = ., \n",
+    "          height = 0.1, width = 0.1, \n",
+    "          xlab = \"Interest in Statistics\", ylab = \"Anxious About Doing Math\")"
    ]
   },
   {
@@ -415,14 +492,18 @@
    "id": "04d62956",
    "metadata": {},
    "source": [
-    "If you want even finer control over the axes and titles, there's another function called ```gf_labs()``` that, like ```gf_refine()```, can be chained on. Check out the code below, and try adjusting all the possible options for ```gf_labs()```."
+    "Lastly, if you want even finer control over the axes and titles, there's another function called ```gf_labs()``` that, like ```gf_refine()```, can be chained on. Check out the code below, and try adjusting all the possible options for ```gf_labs()```."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "faebb86b",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "gf_jitter(Thumb ~ Sex, data = studentdata, width = 0.2, height = 0, \n",
@@ -460,7 +541,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "63c934c2",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "gf_histogram(~ Thumb, data = studentdata, fill = ~ Sex) %>%\n",
@@ -497,7 +582,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "be4770c7",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "install.packages(\"viridis\") \n",
@@ -521,7 +610,10 @@
    "execution_count": null,
    "id": "1f39e95d",
    "metadata": {
-    "scrolled": true
+    "scrolled": true,
+    "vscode": {
+     "languageId": "r"
+    }
    },
    "outputs": [],
    "source": [
@@ -529,8 +621,8 @@
     "    gf_refine(., scale_fill_viridis(discrete = TRUE))\n",
     "\n",
     "gf_point(Middle ~ Thumb, data = studentdata, color = ~ Thumb, size = 3) %>%\n",
-    "    gf_refine(., scale_color_viridis(discrete = FALSE)) \n",
-    "                    #FALSE is the default value, so not required to add it here"
+    "    gf_refine(., scale_color_viridis()) \n",
+    "#discrete = FALSE is the default value in scale_color_viridis(), so not required to add it here"
    ]
   },
   {
@@ -545,7 +637,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "5dba4922",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "gf_point(Middle ~ Thumb, data = studentdata, color = ~ Thumb, size = 3) %>%\n",
@@ -564,7 +660,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "d3a6e3c5",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "colorpalette <- viridis(5, option = \"plasma\")\n",
@@ -603,7 +703,7 @@
     "\n",
     "<img src=\"images/ch7-piechart.png\" width=\"500\">\n",
     "\n",
-    "This plot is terrible for several reasons. First, it requires distinguishing a large number of colors from very small patches at the bottom of the figure. Second, the 3D perspective distorts the relative numbers, such that the pie wedge for Catholic appears much larger than the pie wedge for None, when in fact the number for None is slightly larger (22.8 vs 20.8 percent). Third, by separating the legend from the graphic, it requires the viewer to hold information in their working memory in order to map between the graphic and legend and to conduct many “table look-ups” in order to continuously match the legend labels to the visualization. And finally, it uses text that is far too small, making it impossible to read without zooming in.\n",
+    "This plot is terrible for several reasons. First, it requires distinguishing a large number of colors from very small patches at the bottom of the figure. Second, the 3D perspective distorts the relative numbers, such that the pie wedge for Catholic appears much larger than the pie wedge for None, when in fact the number for None is slightly larger (22.8 vs 20.8 percent). Third, it uses text that is far too small, making it impossible to read without zooming in.\n",
     "\n",
     "Plotting the data using a more reasonable approach, we can see the pattern much more clearly. This plot may not look as flashy as the pie chart generated using Excel, but it’s a much more effective and accurate representation of the data.\n",
     "\n",
@@ -625,7 +725,20 @@
     "- Describe the 5 basic rules of visualization\n",
     "- Manipulate the color, size, and transparency of data in R plots\n",
     "- Change axis labels and titles in R plots\n",
-    "- Choose plot elements based on how well they communicate your intended message"
+    "- Choose plot elements based on how well they communicate your intended message\n",
+    "\n",
+    "## New concepts\n",
+    "\n",
+    "- **violin plot**: A type of data visualization that plots the distribution of data per group.\n",
+    "\n",
+    "## New R functionality\n",
+    "\n",
+    "- [ggformula::gf_violin()](https://www.mosaic-web.org/ggformula/reference/gf_violin.html)\n",
+    "- [ggplot2::coord_cartesian()](https://ggplot2.tidyverse.org/reference/coord_cartesian.html)\n",
+    "- [factor()](http://www.cookbook-r.com/Manipulating_data/Changing_the_order_of_levels_of_a_factor/)\n",
+    "- [ggformula::gf_labs()](https://www.rdocumentation.org/packages/ggformula/versions/0.10.1/topics/gf_labs)\n",
+    "- [viridis::scale_color_viridis() & scale_fill_viridis()](https://sjmgarnier.github.io/viridis/reference/scale_viridis.html)\n",
+    "- [viridis::viridis() and other palettes](https://sjmgarnier.github.io/viridisLite/reference/viridis.html)"
    ]
   },
   {
@@ -649,7 +762,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "4.2.3"
+   "version": "4.3.2"
   }
  },
  "nbformat": 4,
