add new R functionality section at end of chapters 6 & 7

--- a/chapter-4.ipynb
+++ b/chapter-4.ipynb
@@ -321,7 +321,7 @@
    },
    "outputs": [],
    "source": [
-    "filter(tetrismemories, tetris_total_score != \"NA\")"
+    "filter(tetrismemories, !is.na(tetris_total_score))"
    ]
   },
   {
@@ -329,7 +329,23 @@
    "id": "f4cc925e",
    "metadata": {},
    "source": [
-    "Can you remember what the ```!=``` operator does? This code returns a data frame that includes only cases for which the variable ```tetris_total_score``` is *not* equal to NA. "
+    "Can you remember what the ```!``` operator does? This code returns a data frame that includes only cases for which the variable ```tetris_total_score``` is *not* equal to NA. \n",
+    "\n",
+    "If you have multiple filtering steps to do, note that you can include multiple logic statements in ```filter()``` as separate arguments separated by commas. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "298c8973",
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "filter(tetrismemories, diary_compliance >= 8, tetris_total_score != \"NA\")"
    ]
   },
   {
