--- a/chapter-6.ipynb
+++ b/chapter-6.ipynb
@@ -107,7 +107,7 @@
    "source": [
     "Quickly evaluating the distribution, it looks like most of the thumbs are between 40 and 80 mm long; the center of the distribution is somewhere around 60 mm; and the distribution is kind of normal-shaped, with most of the observations clustered around the middle, then just a few observations in the outer tails.\n",
     "\n",
-    "Let’s say we want to check some other variable to see if it explains the variation we see in thumb length. A starting place is to think about other variables that, if we knew someone’s score on that variable, would help us make a better guess about their thumb length. Below is a list of some of the variables in ```student``` and descriptions of how they were coded. Which of these variables might be related to thumb length? \n",
+    "Let’s say we want to check some other variable to see if it explains the variation we see in thumb length. A starting place is to think about other variables that, if we knew someone’s score on that variable, would help us make a better guess about their thumb length. Below is a list of some of the variables in ```studentdata``` and descriptions of how they were coded. Which of these variables might be related to thumb length? \n",
     "\n",
     "- ```Sex```: female, male, non-binary, or prefer not to answer\n",
     "- ```RaceEthnic```: White, Black, Asian, Latino, Middle Eastern, or Other\n",
