--- a/chapter-2.ipynb
+++ b/chapter-2.ipynb
@@ -653,7 +653,7 @@
     "- **inter-rater reliability**: A type of reliability representing the agreement between different observers who rated the same entity on some variable. \n",
     "- **validity**: The extent to which a measurement tool accurately measures the construct it is intended to measure. \n",
     "- **face validity**: A type of validity where a measurement method makes sense for the construct \"on its face.\" \n",
-    "- **convergent validity**: A type of validity where a measurement method of a construct produces similar values to measurements of related constructs. \n",
+    "- **convergent validity**: A type of validity where a measurement method of a construct produces similar values to measurements of closely related constructs. \n",
     "- **divergent validity**: A type of validity where a measurement method of a construct produces dissimilar values to measurements of unrelated constructs. \n",
     "- **measurement error**: Deviations between values produced by a measurement method and the true value of what is being measured. \n",
     "- **outlier**: A data value that is very different than the rest of the sample it belongs to. An outlier may or may not be a valid value. \n",
