fix error in object naming rules ch1

--- a/chapter-1.ipynb
+++ b/chapter-1.ipynb
@@ -339,7 +339,7 @@
     "You can name your objects almost anything. There are just a few rules to follow:\n",
     "\n",
     "- R is case-sensitive. Any little change in the name of an object will be considered a separate object (e.g., ```step1``` vs. ```Step1```). \n",
-    "- You can use letters, numbers, underscores, and hyphens for your names, but they must always start with a letter.\n",
+    "- You can use letters, numbers, underscores, and periods for your names, but they must always start with a letter.\n",
     "- Names need to be all one word (no spaces). \n",
     "\n",
     "In addition to these requirements by the language, the R user community has decided on preferred naming conventions, called a [style guide](http://adv-r.had.co.nz/Style.html), in order to make code easier to read and consistent across people. You don't have to follow this style guide for this course, but it would be a good idea to make these naming conventions into habit. \n",
