--- a/chapter-3.ipynb
+++ b/chapter-3.ipynb
@@ -209,9 +209,9 @@
     "\n",
     "The first thing to do when opening a dataset for the first time is to understand it - what each variable is, how many data points, what the variable data types are, etc. \n",
     "\n",
-    "After you run the code above, you should see a big print out of the whole dataframe. You might be thinking to yourself, “Wow, that’s a lot to take in.” In fact, this would be considered a small dataset! Real data can have thousands of datapoints stored together, with hundreds of variables recorded. It can get unweildy to look at a whole dataset at once. Thus its usually best to look at a summary of the data in a dataframe, or a sampling of it. \n",
+    "After you run the code above, you should see a big print out of the whole data frame. You might be thinking to yourself, “Wow, that’s a lot to take in.” In fact, this would be considered a small dataset! Real data can have thousands of datapoints stored together, with hundreds of variables recorded. It can get unweildy to look at a whole dataset at once. Thus its usually best to look at a summary of the data in a data frame, or a sampling of it. \n",
     "\n",
-    "We can use certain functions to do this summarizing for us. But first, we have to make sure we save our dataframe so we can keep using it over and over. Remember that we have a new data type, data frame, which means it can be saved as an object itself. In the code below, read the data frame into an object called ```tetrismemories```."
+    "We can use certain functions to do this summarizing for us. But first, we have to make sure we save our data frame so we can keep using it over and over. Remember that we have a new data type, data frame, which means it can be saved as an object itself. In the code below, read the data frame into an object called ```tetrismemories```."
    ]
   },
   {
@@ -253,7 +253,7 @@
    },
    "outputs": [],
    "source": [
-    "#run this code to see the head of the dataframe\n",
+    "#run this code to see the head of the data frame\n",
     "head(tetrismemories)"
    ]
   },
@@ -392,15 +392,7 @@
     "\n",
     "Control flow refers to telling a programming language like R the order you want it to evaluate code commands in. So far we haven't written much more than a few lines of code at a time, but what happens when you write code scripts that are many lines long? How is it all executed? By default, R reads your code from the top of a file to the bottom. Each line of code happens one at a time, in order. But sometimes you want R to do things multiple times (e.g., repeat a calculation for each data point), or you want it to do different things depending on some condition (e.g., do a calculation only if a datapoint is of a certain value). \n",
     "\n",
-    "For a non-data example, say you were writing a computer program that would cook chicken:\n",
-    "\n",
-    "1) Add heat to pan\n",
-    "2) Add chicken breast\n",
-    "3) Check chicken doneness once a minute\n",
-    "4) Once chicken is done, turn off heat\n",
-    "5) If bland, add salt to chicken\n",
-    "\n",
-    "To do the above with code, you need to *control* what steps R executes, and when to execute them. Two concepts that help you do this are **conditional statements** and **loops**. By including some specific syntax, you can set up conditional statements and loops that tell R when you want code to be treated in a special way like this. "
+    "To do this, you need to *control* what steps R executes, and when to execute them. Two concepts that help you do this are **conditional statements** and **loops**. By including some specific syntax, you can set up conditional statements and loops that tell R when you want code to be treated in a special way like this. "
    ]
   },
   {
