fix markdown block that should be code block ch3

--- a/chapter-3.ipynb
+++ b/chapter-3.ipynb
@@ -432,7 +432,7 @@
    "id": "65f7038e",
    "metadata": {},
    "source": [
-    "In this case the logical expression was true - x was greater than y - so the ```print(x)``` statement was executed.\n",
+    "In this case the logical expression was true - x was greater than y - so the ```print(x)``` statement was executed. If the logical statement were false, nothing would have been printed.\n",
     "\n",
     "If statements are often accompanied by \"else\" statements. Else statements come after if statements and allow you to execute separate code in the event that the logical expression of an if statement is false."
    ]
@@ -603,9 +603,15 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "a2a47168",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d4c21275",
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
    "source": [
     "my_sequence <- c(2,4,6,8,10)         \n",
     "\n",
