more filter() options ch4

--- a/chapter-4.ipynb
+++ b/chapter-4.ipynb
@@ -200,7 +200,7 @@
    "source": [
     "## 4.2 Filtering bad data\n",
     "\n",
-    "Filtering is very useful for removing data points we don't want, such as the bad outliers and missing values discussed in chapter 2. To remove outliers, we need to decide what counts as realistic values for a variable. There are different opinions on this among researchers. Some believe you should remove any data points that are sufficiently far away from the average of a variable (chapter 5 will discuss ways to calculate this). Other researchers are more conservative and think you should only remove data points if the value is clearly incorrect, like someone mistyping their age as 211 instead of 21. This is an example of a situation where statistics aren't completely objective, and different decisions lead to different analysis outcomes. You will have to develop domain knowledge in the topic you are studying in order to be confident that the decision you made on outlier classification is the best decision for your data.  \n",
+    "Filtering is very useful for removing data points we don't want, such as the bad outliers and missing values discussed in chapter 2. To remove outliers, we need to decide what counts as realistic values for a variable. There are different opinions on this among researchers. Some believe you should remove any data points that are sufficiently far away from the average of a variable (chapter 5 will discuss ways to calculate this). Other researchers are more conservative and think you should only remove data points if the value is clearly incorrect, like someone mistyping their age as 211 instead of 21. This is an example of a situation where statistics aren't completely objective, and different decisions lead to different analysis outcomes. If you leave outliers in, will your data be too noisy? If you remove many outliers, are you choosing a cut off based on what helps your hypothesis the most? You will have to develop domain knowledge in the topic you are studying in order to be confident that the decision you made on outlier classification is the best decision for your data.  \n",
     "\n",
     "Let's say for our purposes that it wouldn't be realistic for anyone to have more than 100 intrusive memories during the tetris study (that would be at least 10 per day). Thus if an observation has a value of >100 in ```instrusive_memories```, we want to exclude it as bad data. Write code below to create a new data frame that excludes anyone with more than 100 reported intrusive memories. "
    ]
@@ -278,7 +278,7 @@
    "source": [
     "Using this approach, we removed 12 participants for poor complaince. \n",
     "\n",
-    "Another reason to exclude observations from a dataset is because of missing values. It is very common in psychology to have at least a few missing values somewhere. In a data file, this would likely look like a blank cell where a value should otherwise be. When loaded into R, blank cells are represented with the value NA (\"not available\"). If your data set represents missing data in some other way (e.g., some people put a nonsense value like -999), you should recode the values as NA when working in R (recoding will be discussed later in this chapter).  \n",
+    "Another reason to exclude observations from a dataset is because of missing values. It is very common in psychology to have at least a few missing values somewhere. In a data file, this would likely look like a blank cell where a value should otherwise be. When loaded into R, blank cells are represented with the value NA (\"not available\"). If your dataset represents missing data in some other way (e.g., some people put a nonsense value like -999), you should recode the values as NA when working in R (recoding will be discussed later in this chapter).  \n",
     "\n",
     "Let’s consider the ```tetris_total_score``` variable in the ```tetrismemories``` data frame. First, a function called ```is.na()``` can be used to tell you whether a datapoint is NA or not (it will return ```FALSE``` or ```TRUE```). If we apply that to an entire vector, it will return a vector of falses and trues corresponding to what indices in the vector have an NA value. "
    ]
@@ -345,7 +345,7 @@
    },
    "outputs": [],
    "source": [
-    "filter(tetrismemories, diary_compliance >= 8, tetris_total_score != \"NA\")"
+    "filter(tetrismemories, diary_compliance >= 8, !is.na(tetris_total_score))"
    ]
   },
   {
