add new concepts and R functionality sections at end of ch8

--- a/chapter-4.ipynb
+++ b/chapter-4.ipynb
@@ -479,6 +479,7 @@
     "tetrismemories_recoded <- tetrismemories #avoiding destructive editing by making a new copy of data frame\n",
     "str(tetrismemories_recoded$condition)\n",
     "\n",
+    "#base R method\n",
     "tetrismemories_recoded$condition <- as.character(tetrismemories$condition)\n",
     "str(tetrismemories_recoded$condition)\n",
     "\n",
