--- a/chapter-5.ipynb
+++ b/chapter-5.ipynb
@@ -897,7 +897,8 @@
     "- **skewed**: A distribution shape where who half of the distribution is more spread out than the other. \n",
     "- **uniform**: A distribution shape where there is no clear peak; the distribution looks approximately like a rectangle. \n",
     "- **unimodal**: A distribution shape where there is one clear peak. \n",
-    "- **bimodal**: A distribution shape where there are two clear peaks. \n",
+    "- **bimodal**: A distribution shape where there are two clear peaks.\n",
+    "- **normal**: A distribution shape that is unimodal and symmetrical.  \n",
     "- **central tendency**: The \"middle\" or \"typical\" value of a distribution; close to where most points are. \n",
     "- **mean**: A method of representing the central tendency of a distribution by summing all values and dividing by the number of values. \n",
     "- **median**: A method of representing the central tendency of a distribution by finding the middle value if all values were ordered smallest to largest. \n",
