--- a/chapter-7.ipynb
+++ b/chapter-7.ipynb
@@ -205,7 +205,7 @@
    "outputs": [],
    "source": [
     "# Switch this to a better plot type, and make the group colors different\n",
-    "gf_point(Middle ~ Sex, data = studentdata, color = \"orange\", size = 5) \n"
+    "gf_point(Middle ~ Sex, data = studentdata, color = \"orange\", size = 5) "
    ]
   },
   {
