add new concepts and R functionality sections at end of ch9

--- a/chapter-3.ipynb
+++ b/chapter-3.ipynb
@@ -630,6 +630,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a2a47168",
+   "metadata": {},
+   "source": [
+    "my_sequence <- c(2,4,6,8,10)         \n",
+    "\n",
+    "for (position in 1:length(my_sequence)) {     # for loop over the position number of each item,\n",
+    "    print(position)                           # from the first item up to the max length of my_sequence\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "5c283db3",
    "metadata": {},
    "source": [
@@ -679,7 +691,7 @@
    },
    "outputs": [],
    "source": [
-    "to_exclude <- vector()   #function for making an empty vector to hold values in\n",
+    "to_exclude <- vector()  #function for making an empty vector to hold values in\n",
     "\n",
     "for (row in 1:nrow(tetrismemories)) {\n",
     "    if (tetrismemories$diary_compliance[row] < 8) {\n",
