--- a/chapter-8.ipynb
+++ b/chapter-8.ipynb
@@ -413,7 +413,7 @@
    "id": "086e9311",
    "metadata": {},
    "source": [
-    "Perhaps the population you want to draw from has more variability, so the standard deviation of your distribution is actually 3. Recalculate the probability of drawing a value of 2 deom this new population:"
+    "Perhaps the population you want to draw from has more variability, so the standard deviation of your distribution is actually 3. Recalculate the probability of drawing a value of 2 from this new population:"
    ]
   },
   {
